...
                    android:minWidth="0dp"
                    android:text="@string/full_screen"
                    android:textAllCaps="false"
                    android:textSize="13sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUseTemplate"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
...
